<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Hadvlop@gmail.com on 11/1/16 1:13 PM
  ~ Copyright © 2016, All Rights Reserved.
  ~
  ~ Last modified 8/25/16 4:34 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_selector"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_capture"
        style="@style/CusBase.style.size"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/title_dialog_choice_capture"
        android:textSize="@dimen/size_text_app_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/btn_library"
        style="@style/CusBase.style.size"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/title_dialog_choice_library"
        android:textSize="@dimen/size_text_app_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/darker_gray" />


    <Button
        android:id="@+id/btn_cancel"
        style="@style/CusButtonTheme"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/confirm_ui_padding_w"
        android:background="@android:color/transparent"
        android:text="@string/btn_new_job_cancel" />
</LinearLayout>


