<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lout_container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/control_input_text_h"
            android:layout_height="@dimen/control_input_text_h"
            android:layout_marginEnd="@dimen/confirm_ui_padding_w"
            android:layout_marginLeft="@dimen/confirm_ui_padding_w"
            android:layout_marginRight="@dimen/confirm_ui_padding_w"
            android:layout_marginStart="@dimen/confirm_ui_padding_w"
            android:src="@mipmap/ic_close" />

        <ImageView
            android:layout_width="@dimen/control_input_text_h"
            android:layout_height="@dimen/control_input_text_h"
            android:src="@mipmap/ic_avatar_default"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/CusTextViewTitleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="@dimen/confirm_ui_padding_w"
            android:paddingRight="@dimen/confirm_ui_padding_w"
            android:singleLine="true"
            android:textColor="@color/color_text_title" />

        <ImageView
            android:id="@+id/btn_camera"
            android:layout_width="@dimen/control_input_text_h"
            android:layout_height="@dimen/control_input_text_h"
            android:layout_marginEnd="@dimen/confirm_ui_padding_w"
            android:layout_marginRight="@dimen/confirm_ui_padding_w"
            android:src="@mipmap/ic_camera" />

        <ImageView
            android:id="@+id/btn_map_places"
            android:layout_width="@dimen/control_input_text_h"
            android:layout_height="@dimen/control_input_text_h"
            android:layout_marginEnd="@dimen/confirm_ui_padding_w"
            android:layout_marginRight="@dimen/confirm_ui_padding_w"
            android:src="@mipmap/ic_map_place" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/lout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_thumb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/confirm_ui_choose_service"
                android:layout_marginBottom="@dimen/confirm_ui_padding_w"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_title_1"
                    style="@style/CusTextViewContentTheme"
                    android:layout_width="match_parent"
                    android:layout_margin="0dp"
                    android:paddingLeft="@dimen/confirm_ui_padding_w"
                    android:paddingRight="@dimen/confirm_ui_padding_w"
                    android:text="Brief introduction"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txt_description"
                    style="@style/CusTextViewContentTheme"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    android:paddingLeft="@dimen/confirm_ui_padding_w"
                    android:paddingRight="@dimen/confirm_ui_padding_w"
                    android:paddingTop="@dimen/confirm_ui_padding_w"
                    android:text="Hanoi has been the capital city of Vietnam for over 1,000 years. It is undoubtedly one of the must-visit locations in Vietnam. Hanoi is the best starting point of your journey in Vietnam for its extremely..."
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/size_text_app_content" />

                <TextView
                    android:id="@+id/txt_read_all"
                    style="@style/CusTextViewContentTheme"
                    android:layout_width="match_parent"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/confirm_ui_padding_w"
                    android:paddingRight="@dimen/confirm_ui_padding_w"
                    android:text="@string/title_read_more"
                    android:textAllCaps="true"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginTop="@dimen/confirm_ui_padding_w"
                    android:background="@color/color_transparent_22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CusTextViewContentTheme"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    android:paddingLeft="@dimen/confirm_ui_padding_w"
                    android:paddingRight="@dimen/confirm_ui_padding_w"
                    android:paddingTop="@dimen/confirm_ui_padding_w"
                    android:text="@string/title_detail_guide"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/size_text_app_content" />

                <TextView
                    android:id="@+id/txt_info_audio_guide"
                    style="@style/CusTextViewContentTheme"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:paddingTop="@dimen/confirm_ui_padding_w"
                    android:text="@string/title_detail_guide_count_sound"
                    android:textColor="@color/color_text_title_gray"
                    android:textSize="@dimen/size_text_app_content"
                    android:textStyle="italic" />

            </LinearLayout>

            <com.strategy.intecom.vtc.vigo.view.custom.listcontent.ListViewWrapContent
                android:id="@+id/lst_audio_guild"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/lout_container_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_gray"
        android:padding="@dimen/confirm_ui_padding_w">

        <TextView
            android:id="@+id/txt_price"
            style="@style/CusTextViewTitleTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_toLeftOf="@+id/btn_buy"
            android:layout_toStartOf="@+id/btn_buy"
            android:text="@string/title_currency_usd"
            android:textAllCaps="true"
            android:textColor="@color/color_text_title" />

        <TextView
            android:id="@+id/txt_price_description"
            style="@style/CusTextViewContentTheme"
            android:layout_width="match_parent"
            android:layout_below="@+id/txt_price"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toLeftOf="@+id/btn_buy"
            android:layout_toStartOf="@+id/btn_buy"
            android:text="@string/title_detail_guide_price_content"
            android:textColor="@color/color_text_title_gray" />


        <TextView
            android:id="@+id/btn_buy"
            style="@style/CusTextViewTitleTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/btn_selector"
            android:paddingBottom="@dimen/confirm_ui_padding_w"
            android:paddingEnd="@dimen/confirm_ui_padding_h"
            android:paddingLeft="@dimen/confirm_ui_padding_h"
            android:paddingRight="@dimen/confirm_ui_padding_h"
            android:paddingStart="@dimen/confirm_ui_padding_h"
            android:paddingTop="@dimen/confirm_ui_padding_w"
            android:text="@string/btn_buy_now"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</LinearLayout>